Добавляет препроцессорные файлы и стили для блока формы с персональной информацией на странице Форм

--- a/source/form.html
+++ b/source/form.html
@@ -26,15 +26,15 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
-        <div class="page-header__promo promo container">
-          <img class="promo__slogan-image" src="#" width="229" height="39" alt="Sedona title">
+        <div class="page-header__promo promo promo--inner">
+          <img class="promo__slogan-image promo__slogan-image--inner" src="./img/slogan-inner.svg" width="229" height="39" alt="Sedona title">
         </div>
       </nav>
     </header>
 
     <main class="main">
       <section class="feedback">
-        <div class="feedback__wrapper container">
+        <div class="feedback__wrapper">
           <h1 class="feedback__page-title title">Оставьте свой отзыв</h1>
           <p class="feedback__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
           <form class="feedback__form form" action="https://echo.htmlacademy.ru/" method="get">
