Добавляет стили для блоков с мнением и чеклистом на странице Форм

--- a/source/form.html
+++ b/source/form.html
@@ -73,15 +73,15 @@
                 <ul class="form__list">
                   <li class="form__item">
                     <input class="form__radio-field form__radio-field--checked" id="positive-response" type="radio" name="opinion" value="positive" checked>
-                    <label class="form__label" for="positive-response">Скорее положительное</label>
+                    <label class="form__label form__label-radio" for="positive-response">Скорее положительное</label>
                   </li>
                   <li class="form__item">
                     <input class="form__radio-field" id="negative-response" type="radio" name="opinion" value="negative">
-                    <label class="form__label" for="negative-response">Скорее отрицательное</label>
+                    <label class="form__label form__label-radio" for="negative-response">Скорее отрицательное</label>
                   </li>
                   <li class="form__item">
                     <input class="form__radio-field" id="nо-response" type="radio" name="opinion" value="unknown">
-                    <label class="form__label" for="nо-response">Затрудняюсь ответить</label>
+                    <label class="form__label form__label-radio" for="nо-response">Затрудняюсь ответить</label>
                   </li>
                 </ul>
               </fieldset>
@@ -91,19 +91,19 @@
                 <ul class="form__list">
                   <li class="form__item">
                     <input class="form__checkbox form__checkbox--checked" id="devil-bridge" type="checkbox" name="devil-bridge" checked>
-                    <label class="form__label" for="devil-bridge">Мост Дьявола</label>
+                    <label class="form__label form__label-checkbox" for="devil-bridge">Мост Дьявола</label>
                   </li>
                   <li class="form__item">
                     <input class="form__checkbox form__checkbox--checked" id="mount-bell" type="checkbox" name="mount-bell" checked>
-                    <label class="form__label" for="mount-bell">Гора-Колокол</label>
+                    <label class="form__label form__label-checkbox" for="mount-bell">Гора-Колокол</label>
                   </li>
                   <li class="form__item">
                     <input class="form__checkbox form__checkbox--checked" id="slide-park"  type="checkbox" name="slide-park" checked>
-                    <label class="form__label" for="slide-park">Слайд-парк</label>
+                    <label class="form__label form__label-checkbox" for="slide-park">Слайд-парк</label>
                   </li>
                   <li class="form__item">
                     <input class="form__checkbox" id="red-rocks" type="checkbox" name="red-rocks">
-                    <label class="form__label" for="red-rocks">Красные скалы</label>
+                    <label class="form__label form__label-checkbox" for="red-rocks">Красные скалы</label>
                   </li>
                 </ul>
               </fieldset>
