Добавляет стили состояний при наведении и нажатии для полей ввода, радиокнопок и чекбоксов на странице Форм

--- a/source/form.html
+++ b/source/form.html
@@ -59,11 +59,11 @@
               <legend class="form__title title">Контактная информация:</legend>
               <p class="form__box">
                 <label class="form__label" for="user-phone">Контактный телефон<sup>*</sup>:</label>
-                <input class="form__text-field form__tel-field" id="user-phone" type="tel" name="user-phone" value="Введите телефон">
+                <input class="form__text-field form__tel-field" id="user-phone" type="tel" name="user-phone" placeholder="Введите телефон">
               </p>
               <p class="form__box">
                 <label class="form__label" for="user-email">Электронная почта<sup>*</sup>:</label>
-                <input class="form__text-field form__email-field" id="user-email" type="email" name="user-email" value="Введите e-mail">
+                <input class="form__text-field form__email-field" id="user-email" type="email" name="user-email" placeholder="Введите e-mail">
               </p>
             </fieldset>
 
