--- a/source/form.html
+++ b/source/form.html
@@ -163,15 +163,17 @@
     </footer>
 
     <section class="modal modal--warning">
-      <h2 class="modal__title">Что-то пошло не так!</h2>
+      <h2 class="modal__title title">Что-то пошло не так!</h2>
       <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       <button class="modal__close-button button" type="button" aria-label="Закрыть окно">ОК</button>
     </section>
 
     <section class="modal modal--information">
-      <h2 class="modal__title">Ваш отзыв отправлен!</h2>
-      <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте</p>
-      <button class="modal__close-button button" type="button">Закрыть окно</button>
+      <h2 class="modal__title title">Ваш отзыв отправлен!</h2>
+      <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте</p>
+      <div class="modal__wrapper">
+        <button class="modal__close-button button" type="button">Закрыть окно</button>
+      </div>
     </section>
 
   </body>
