--- a/3/form.html
+++ b/3/form.html
@@ -27,108 +27,108 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
-        <div class="page-header__promo promo container">
-          <img class="promo__slogan-image" src="#" width="229" height="39" alt="Sedona title">
+        <div class="page-header__promo promo promo--inner">
+          <img class="promo__slogan-image promo__slogan-image--inner" src="./img/slogan-inner.svg" width="229" height="39" alt="Sedona title">
         </div>
       </nav>
     </header>
 
     <main class="main">
       <section class="feedback">
-        <div class="feedback__wrapper container">
+        <div class="feedback__wrapper">
           <h1 class="feedback__page-title title">Оставьте свой отзыв</h1>
           <p class="feedback__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
           <form class="feedback__form form" action="https://echo.htmlacademy.ru/" method="get">
-            <div class="form__wrapper">
 
-              <fieldset class="form__block form__personal-info">
-                <legend class="form__title title">Представьтесь:</legend>
-                <p class="form__box">
-                  <label class="form__label" for="name">Имя<sup>*</sup>:</label>
-                  <input class="form__text-field" id="name" type="text" name="name" placeholder="Пётр" required>
-                </p>
-                <p class="form__box">
-                  <label class="form__label" for="surname">Фамилия<sup>*</sup>:</label>
-                  <input class="form__text-field" id="surname" type="text" name="surname" placeholder="Пустота" required>
-                </p>
-                <p class="form__box">
-                  <label class="form__label" for="patronymic">Отчество:</label>
-                  <input class="form__text-field" id="patronymic" type="text" name="patronymic" placeholder="Викторович">
-                </p>
-              </fieldset>
+            <fieldset class="form__block form__personal-info">
+              <legend class="form__title title">Представьтесь:</legend>
+              <p class="form__box">
+                <label class="form__label" for="name">Имя<sup>*</sup>:</label>
+                <input class="form__text-field" id="name" type="text" name="name" placeholder="Пётр" required>
+              </p>
+              <p class="form__box">
+                <label class="form__label" for="surname">Фамилия<sup>*</sup>:</label>
+                <input class="form__text-field" id="surname" type="text" name="surname" placeholder="Пустота" required>
+              </p>
+              <p class="form__box">
+                <label class="form__label" for="patronymic">Отчество:</label>
+                <input class="form__text-field" id="patronymic" type="text" name="patronymic" placeholder="Викторович">
+              </p>
+            </fieldset>
 
-              <fieldset class="form__block form__contact-info">
-                <legend class="form__title title">Контактная информация:</legend>
-                <p class="form__box">
-                  <label class="form__label" for="user-phone">Контактный телефон<sup>*</sup>:</label>
-                  <input class="form__text-field form__tel-field" id="user-phone" type="tel" name="user-phone" value="Введите телефон">
-                </p>
-                <p class="form__box">
-                  <label class="form__label" for="user-email">Электронная почта<sup>*</sup>:</label>
-                  <input class="form__text-field form__email-field" id="user-email" type="email" name="user-email" value="Введите e-mail">
-                </p>
-              </fieldset>
+            <fieldset class="form__block form__contact-info">
+              <legend class="form__title title">Контактная информация:</legend>
+              <p class="form__box">
+                <label class="form__label" for="user-phone">Контактный телефон<sup>*</sup>:</label>
+                <input class="form__text-field form__tel-field" id="user-phone" type="tel" name="user-phone" placeholder="Введите телефон">
+              </p>
+              <p class="form__box">
+                <label class="form__label" for="user-email">Электронная почта<sup>*</sup>:</label>
+                <input class="form__text-field form__email-field" id="user-email" type="email" name="user-email" placeholder="Введите e-mail">
+              </p>
+            </fieldset>
 
-              <fieldset class="form__block form__opinion">
-                <legend class="form__title title">Ваше общее впечатление:</legend>
-                <ul class="form__list">
-                  <li class="form__item">
-                    <input class="form__radio-field form__radio-field--checked" id="positive-response" type="radio" name="opinion" value="positive" checked>
-                    <label class="form__label" for="positive-response">Скорее положительное</label>
-                  </li>
-                  <li class="form__item">
-                    <input class="form__radio-field" id="negative-response" type="radio" name="opinion" value="negative">
-                    <label class="form__label" for="negative-response">Скорее отрицательное</label>
-                  </li>
-                  <li class="form__item">
-                    <input class="form__radio-field" id="nо-response" type="radio" name="opinion" value="unknown">
-                    <label class="form__label" for="nо-response">Затрудняюсь ответить</label>
-                  </li>
-                </ul>
-              </fieldset>
+            <fieldset class="form__block form__opinion">
+              <legend class="form__title title">Ваше общее впечатление:</legend>
+              <ul class="form__list">
+                <li class="form__item">
+                  <input class="form__radio-field form__radio-field--checked" id="positive-response" type="radio" name="opinion" value="positive" checked>
+                  <label class="form__label form__label-radio" for="positive-response">Скорее положительное</label>
+                </li>
+                <li class="form__item">
+                  <input class="form__radio-field" id="negative-response" type="radio" name="opinion" value="negative">
+                  <label class="form__label form__label-radio" for="negative-response">Скорее отрицательное</label>
+                </li>
+                <li class="form__item">
+                  <input class="form__radio-field" id="nо-response" type="radio" name="opinion" value="unknown">
+                  <label class="form__label form__label-radio" for="nо-response">Затрудняюсь ответить</label>
+                </li>
+              </ul>
+            </fieldset>
 
-              <fieldset class="form__block form__checklist">
-                <legend class="form__title title">Посещенные достопримечательности:</legend>
-                <ul class="form__list">
-                  <li class="form__item">
-                    <input class="form__checkbox form__checkbox--checked" id="devil-bridge" type="checkbox" name="devil-bridge" checked>
-                    <label class="form__label" for="devil-bridge">Мост Дьявола</label>
-                  </li>
-                  <li class="form__item">
-                    <input class="form__checkbox form__checkbox--checked" id="mount-bell" type="checkbox" name="mount-bell" checked>
-                    <label class="form__label" for="mount-bell">Гора-Колокол</label>
-                  </li>
-                  <li class="form__item">
-                    <input class="form__checkbox form__checkbox--checked" id="slide-park"  type="checkbox" name="slide-park" checked>
-                    <label class="form__label" for="slide-park">Слайд-парк</label>
-                  </li>
-                  <li class="form__item">
-                    <input class="form__checkbox" id="red-rocks" type="checkbox" name="red-rocks">
-                    <label class="form__label" for="red-rocks">Красные скалы</label>
-                  </li>
-                </ul>
-              </fieldset>
+            <fieldset class="form__block form__checklist">
+              <legend class="form__title title">Посещенные достопримечательности:</legend>
+              <ul class="form__list">
+                <li class="form__item">
+                  <input class="form__checkbox form__checkbox--checked" id="devil-bridge" type="checkbox" name="devil-bridge" checked>
+                  <label class="form__label form__label-checkbox" for="devil-bridge">Мост Дьявола</label>
+                </li>
+                <li class="form__item">
+                  <input class="form__checkbox form__checkbox--checked" id="mount-bell" type="checkbox" name="mount-bell" checked>
+                  <label class="form__label form__label-checkbox" for="mount-bell">Гора-Колокол</label>
+                </li>
+                <li class="form__item">
+                  <input class="form__checkbox form__checkbox--checked" id="slide-park"  type="checkbox" name="slide-park" checked>
+                  <label class="form__label form__label-checkbox" for="slide-park">Слайд-парк</label>
+                </li>
+                <li class="form__item">
+                  <input class="form__checkbox" id="red-rocks" type="checkbox" name="red-rocks">
+                  <label class="form__label form__label-checkbox" for="red-rocks">Красные скалы</label>
+                </li>
+              </ul>
+            </fieldset>
 
-              <fieldset class=" form__block form__comment">
-                <legend class="form__title title">Опишите свои эмоции:</legend>
-                <p class="form__box">
-                  <label class="form__label visually-hidden" for="comment">Текст комментария</label>
-                  <textarea class="form__text-field form__textarea-field" id="comment" name="comment" rows="5" placeholder="Опишите подробно все свои восторги"></textarea>
-                </p>
-              </fieldset>
+            <fieldset class=" form__block form__comment">
+              <legend class="form__title title">Опишите свои эмоции:</legend>
+              <p class="form__box">
+                <label class="form__label" for="comment">Текст комментария</label>
+                <textarea class="form__text-field form__textarea-field" id="comment" name="comment" rows="5" placeholder="Опишите подробно все свои восторги"></textarea>
+              </p>
+            </fieldset>
 
+            <div class="form__submit-wrapper">
               <button class="form__button button" type="submit" name="send-form">Отправить отзыв</button>
-              <small class="form__footnote"><sup>*</sup> — Обязательные поля</small>
-
+              <p class="form__footnote"><small><sup>*</sup> — Обязательные поля</small></p>
             </div>
+
           </form>
         </div>
       </section>
     </main>
 
     <footer class="footer">
-      <div class="footer__wrapper container">
-        <b class="footer__hashtag">#visitsedona</b>
+      <div class="footer__wrapper">
+        <p class="footer__hashtag"><b>#visitsedona</b></p>
         <ul class="footer__list social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
@@ -164,15 +164,17 @@
     </footer>
 
     <section class="modal modal--warning">
-      <h2 class="modal__title">Что-то пошло не так!</h2>
+      <h2 class="modal__title title">Что-то пошло не так!</h2>
       <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       <button class="modal__close-button button" type="button" aria-label="Закрыть окно">ОК</button>
     </section>
 
     <section class="modal modal--information">
-      <h2 class="modal__title">Ваш отзыв отправлен!</h2>
-      <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте</p>
-      <button class="modal__close-button button" type="button">Закрыть окно</button>
+      <h2 class="modal__title title">Ваш отзыв отправлен!</h2>
+      <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте</p>
+      <div class="modal__wrapper">
+        <button class="modal__close-button button" type="button">Закрыть окно</button>
+      </div>
     </section>
 
   </body>
