--- a/3/index.html
+++ b/3/index.html
@@ -7,7 +7,7 @@
     <base href="https://htmlacademy-adaptive.github.io/488659-sedona-26/3/">
 </head>
   <body class="page__body">
-    <header class="page-header page-header--index">
+    <header class="page-header">
       <a class="page-header__logo logo">
         <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
       </a>
@@ -23,11 +23,11 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Форма отзыва</a>
           </li>
-          <li class="main-nav__item main-nav__item--inner-shadow main-nav__item--gradient">
+          <li class="main-nav__item main-nav__item--inner-shadow">
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
-        <div class="page-header__promo promo promo--index">
+        <div class="page-header__promo promo">
           <img class="promo__slogan-image" src="./img/slogan-index.svg" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
         </div>
       </nav>
@@ -41,7 +41,7 @@
           <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           <ol class="features__list">
             <li class="features__item features__item--blue-theme features__item--pattern">
-              <h2 class="features__subtitle title">Настоящий городок</h2>
+              <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
               <span class="features__number">№1</span>
               <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
               <img class="features__image" src="../img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
@@ -61,7 +61,7 @@
               </ul>
             </li>
             <li class="features__item features__item--blue-theme">
-              <h2 class="features__subtitle title">Там есть Мост Дьявола</h2>
+              <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
               <span class="features__number">№2</span>
               <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="features__image" src="../img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
@@ -87,7 +87,7 @@
 
       <section class="service">
         <div class="service__wrapper">
-          <p class="service__intro">Заинтересовались?</p>
+          <h2 class="service__title title">Заинтересовались?</h2>
           <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="service__find-hotel-link" href="#" target="_blank">Найти гостиницу</a>
         </div>
@@ -101,7 +101,7 @@
 
     <footer class="footer">
       <div class="footer__wrapper">
-        <b class="footer__hashtag">#visitsedona</b>
+        <p class="footer__hashtag"><b>#visitsedona</b></p>
         <ul class="footer__list social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
