Добавляет сетку раздела навигации для мобильной версии сайта (мобильное меню) и часть элементов для адаптивной сетки меню

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
       <nav class="page-header__main-nav main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--drop-shadow">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item main-nav__item--active">
@@ -22,7 +22,7 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Форма отзыва</a>
           </li>
-          <li class="main-nav__item main-nav__item--inner-shadow main-nav__item--gradient">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -144,5 +144,6 @@
       </div>
     </footer>
 
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
