--- a/source/form.html
+++ b/source/form.html
@@ -13,7 +13,7 @@
       <nav class="page-header__main-nav main-nav main-nav--closed container">
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--drop-shadow">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
@@ -22,7 +22,7 @@
           <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link">Форма отзыва</a>
           </li>
-          <li class="main-nav__item main-nav__item--inner-shadow main-nav__item--gradient">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -176,5 +176,6 @@
       </div>
     </section>
 
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
