--- a/source/index.html
+++ b/source/index.html
@@ -2,18 +2,19 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo logo">
-        <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
-      </a>
-      <nav class="page-header__main-nav main-nav main-nav--closed">
+      <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
+        <a class="main-nav__logo logo">
+          <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
+        </a>
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active main-nav__item--drop-shadow">
+          <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link">Главная</a>
           </li>
           <li class="main-nav__item">
@@ -22,7 +23,7 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Форма отзыва</a>
           </li>
-          <li class="main-nav__item main-nav__item--inner-shadow">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -135,5 +136,6 @@
       </div>
     </footer>
 
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
