--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,15 +2,16 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo logo" href="index.html">
-        <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
-      </a>
-      <nav class="page-header__main-nav main-nav main-nav--closed">
+      <nav class="page-header__main-nav main-nav main-nav--opened main-nav--nojs">
+        <a class="main-nav__logo logo" href="index.html">
+          <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
+        </a>
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
