--- a/source/index.html
+++ b/source/index.html
@@ -8,9 +8,9 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
+      <nav class="page-header__main-nav main-nav main-nav--opened main-nav--nojs">
         <a class="main-nav__logo logo">
-          <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
+          <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
         </a>
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
@@ -44,7 +44,7 @@
               <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
               <span class="features__number">№1</span>
               <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
-              <img class="features__image" src="../img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
+              <img class="features__image" src="./img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
               <ul class="features__list-benefits benefits">
                 <li class="benefits__item benefits__item--icon-house">
                   <h3 class="benefits__title title">Жилье</h3>
@@ -64,7 +64,7 @@
               <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
               <span class="features__number">№2</span>
               <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-              <img class="features__image" src="../img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
+              <img class="features__image" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
             </li>
             <li class="features__item features__item--gray-theme features__item--underline">
               <h2 class="features__subtitle title">Небольшая площадь</h2>
