Добавляет адаптивную сетку раздела Преимуществ на Главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -42,19 +42,19 @@
           <ol class="features__list">
             <li class="features__item features__item--blue-theme features__item--pattern">
               <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
-              <span class="features__number">№1</span>
+              <p class="features__number"><span>№1</span></p>
               <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
               <img class="features__image" src="./img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
               <ul class="features__list-benefits benefits">
-                <li class="benefits__item benefits__item--icon-house">
+                <li class="benefits__item benefits__item--house">
                   <h3 class="benefits__title title">Жилье</h3>
                   <p class="benefits__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </li>
-                <li class="benefits__item benefits__item--icon-food">
+                <li class="benefits__item benefits__item--food">
                   <h3 class="benefits__title title">Еда</h3>
                   <p class="benefits__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
-                <li class="benefits__item benefits__item--icon-gift">
+                <li class="benefits__item benefits__item--gift">
                   <h3 class="benefits__title title">Сувениры</h3>
                   <p class="benefits__description">Не только китайского, но и местного производства!</p>
                 </li>
@@ -62,23 +62,23 @@
             </li>
             <li class="features__item features__item--blue-theme">
               <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
-              <span class="features__number">№2</span>
+              <p class="features__number"><span>№2</span></p>
               <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="features__image" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
             </li>
             <li class="features__item features__item--gray-theme features__item--underline">
               <h2 class="features__subtitle title">Небольшая площадь</h2>
-              <span class="features__number">№3</span>
+              <p class="features__number"><span>№3</span></p>
               <p class="features__description">Все интересные места находятся очень близко</p>
             </li>
             <li class="features__item features__item--gray-theme features__item--underline">
               <h2 class="features__subtitle title">Красивая дорога</h2>
-              <span class="features__number">№4</span>
+              <p class="features__number"><span>№4</span></p>
               <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="features__item features__item--gray-theme">
               <h2 class="features__subtitle title">Мало туристов</h2>
-              <span class="features__number">№5</span>
+              <p class="features__number"><span>№5</span></p>
               <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ol>
