Добавляет модификатор, меняющий положение изображения в списке преимуществ на Главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
               <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
               <p class="features__number"><span>№2</span></p>
               <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-              <img class="features__image" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
+              <img class="features__image features__image--other-order" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
             </li>
             <li class="features__item features__item--gray-theme features__item--underline">
               <h2 class="features__subtitle title">Небольшая площадь</h2>
