Задает размер кнопки Найти гостиницу и добавляет маркер в раздел с Картой на Главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,9 @@
       </section>
 
       <section class="map">
-        <img class="map__image" src="./img/map-mobile.jpg" width="320" height="350" alt="Месторасположение города Седона: США, штат Аризона">
+        <div class="map__wrapper">
+          <img class="map__image" src="./img/map-mobile.jpg" width="320" height="350" alt="Месторасположение города Седона: США, штат Аризона">
+        </div>
       </section>
 
     </main>
