Стилизует подвал сайта на мобильной версии и добавляет ему крупную адаптивную сетку

--- a/source/index.html
+++ b/source/index.html
@@ -106,33 +106,25 @@
         <p class="footer__hashtag"><b>#visitsedona</b></p>
         <ul class="footer__list social">
           <li class="social__item">
-            <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
-              <svg class="social__link-icon social__link-icon--vk" width="24" height="14">
-                <!-- use -->
-              </svg>
+            <a class="social__link social__link--vk" href="#">
+              <img class="social__icon social__icon--vk" src="./img/icon-vk.svg" width="24" height="14" alt="Vkontakte">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--tg" href="#" aria-label="Telegram">
-              <svg class="social__link-icon social__link-icon--tg" width="21" height="17.6">
-                <!-- use -->
-              </svg>
+            <a class="social__link social__link--telegram" href="#">
+              <img class="social__icon social__icon--telegram" src="./img/icon-telegram.svg" width="21" height="17.6" alt="Telegram">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--ytb" href="#" aria-label="Youtube">
-              <svg class="social__link-icon social__link-icon--ytb" width="20" height="14">
-                <!-- use -->
-              </svg>
+            <a class="social__link social__link--youtube" href="#">
+              <img class="social__icon social__icon--youtube" src="./img/icon-youtube.svg" width="20" height="14" alt="Youtube">
             </a>
           </li>
         </ul>
         <div class="footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
             Разработано
-            <svg class="copyright__link-icon" width="27" height="34">
-              <!-- use -->
-            </svg>
+            <img class="copyright__icon" src="./img/icon-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy"></img>
           </a>
         </div>
       </div>
