--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,73 +36,75 @@
     <main class="main">
 
         <section class="photo-gallery">
-            <div class="photo-gallery__wrapper">
-                <h1 class="photo-gallery__page-title title">Фото и видео</h1>
-                <p class="photo-gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-                <article class="photo-gallery__item">
-                    <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="./img/gallery-photo-road-mobile.jpg" width="280" height="280" alt="Фотография дороги">
-                    </a>
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Борис</p>
-                        </div>
-                        <a class="photo-gallery__like-link" href="#">
-                          <p class="photo-gallery__like-counter"><span>1350</span></p>
-                        </a>
-                    </div>
-                </article>
-                <article class="photo-gallery__item">
-                    <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile.jpg" width="280" height="280" alt="Фотография растения">
-                    </a>
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Местная растительность</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Сергей</p>
-                        </div>
-                        <a class="photo-gallery__like-link" href="#">
-                          <p class="photo-gallery__like-counter"><span>143</span></p>
-                        </a>
-                    </div>
-                </article>
-                <article class="photo-gallery__item">
-                    <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile.jpg" width="280" height="280" alt="Фотография горной дороги">
-                    </a>
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Дорога на север</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Петр</p>
-                        </div>
-                        <a class="photo-gallery__like-link" href="#">
-                          <p class="photo-gallery__like-counter"><span>96</span></p>
-                        </a>
-                    </div>
-                </article>
-                <article class="photo-gallery__item">
-                    <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile.jpg" width="280" height="280" alt="Фотография Моста Дьявола">
-                    </a>
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Антон</p>
-                        </div>
-                        <a class="photo-gallery__like-link" href="#">
-                          <p class="photo-gallery__like-counter"><span>254</span></p>
-                        </a>
-                    </div>
-                </article>
-            </div>
+          <h1 class="photo-gallery__page-title title">Фото и видео</h1>
+          <p class="photo-gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+          <div class="photo-gallery__wrapper">
+            <article class="photo-gallery__item">
+              <a class="photo-gallery__link" href="#" target="_blank">
+                <img class="photo-gallery__item-image" src="./img/gallery-photo-road-mobile.jpg" width="280" height="280" alt="Фотография дороги">
+              </a>
+              <div class="photo-gallery__item-info">
+                <div class="photo-gallery__caption">
+                  <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
+                  <p class="photo-gallery__author-name">Автор фото: Борис</p>
+                </div>
+                <a class="photo-gallery__like-link" href="#">
+                  <p class="photo-gallery__like-counter">1350</p>
+                </a>
+              </div>
+            </article>
+            <article class="photo-gallery__item">
+              <a class="photo-gallery__link" href="#" target="_blank">
+                <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile.jpg" width="280" height="280" alt="Фотография растения">
+              </a>
+              <div class="photo-gallery__item-info">
+                <div class="photo-gallery__caption">
+                  <h2 class="photo-gallery__photo-name">Местная растительность</h2>
+                  <p class="photo-gallery__author-name">Автор фото: Сергей</p>
+                </div>
+                <a class="photo-gallery__like-link" href="#">
+                  <p class="photo-gallery__like-counter">143</p>
+                </a>
+              </div>
+            </article>
+            <article class="photo-gallery__item">
+              <a class="photo-gallery__link" href="#" target="_blank">
+                <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile.jpg" width="280" height="280" alt="Фотография горной дороги">
+              </a>
+              <div class="photo-gallery__item-info">
+                <div class="photo-gallery__caption">
+                  <h2 class="photo-gallery__photo-name">Дорога на север</h2>
+                  <p class="photo-gallery__author-name">Автор фото: Петр</p>
+                </div>
+                <a class="photo-gallery__like-link" href="#">
+                  <p class="photo-gallery__like-counter">96</p>
+                </a>
+              </div>
+            </article>
+            <article class="photo-gallery__item">
+              <a class="photo-gallery__link" href="#" target="_blank">
+                <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile.jpg" width="280" height="280" alt="Фотография Моста Дьявола">
+              </a>
+              <div class="photo-gallery__item-info">
+                <div class="photo-gallery__caption">
+                  <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
+                  <p class="photo-gallery__author-name">Автор фото: Антон</p>
+                </div>
+                <a class="photo-gallery__like-link" href="#">
+                  <p class="photo-gallery__like-counter">254</p>
+                </a>
+              </div>
+            </article>
+          </div>
         </section>
 
         <section class="video-presentation">
             <div class="video-presentation__wrapper">
                 <h2 class="video-presentation__title title">Все еще сомневаетесь?</h2>
                 <p class="video-presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-                <img class="video-presentation__video-file" src="./img/video-mobile.jpg" width="280" height="177" alt="Видео-презентация о городе Седона">
+                <div class="video-presentation__box">
+                  <img class="video-presentation__video-file" src="./img/video-mobile.jpg" width="280" height="177" alt="Видео-презентация о городе Седона">
+                </div>
             </div>
         </section>
 
@@ -113,33 +115,25 @@
         <p class="footer__hashtag"><b>#visitsedona</b></p>
         <ul class="footer__list social">
           <li class="social__item">
-            <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
-              <svg class="social__link-icon social__link-icon--vk" width="24" height="14">
-                <!-- use -->
-              </svg>
+            <a class="social__link social__link--vk" href="#">
+              <img class="social__icon social__icon--vk" src="./img/icon-vk.svg" width="24" height="14" alt="Vkontakte">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--tg" href="#" aria-label="Telegram">
-              <svg class="social__link-icon social__link-icon--tg" width="21" height="17.6">
-                <!-- use -->
-              </svg>
+            <a class="social__link ssocial__link--telegram" href="#">
+              <img class="social__icon social__icon--telegram" src="./img/icon-telegram.svg" width="21" height="17.6" alt="Telegram">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--ytb" href="#" aria-label="Youtube">
-              <svg class="social__link-icon social__link-icon--ytb" width="20" height="14">
-                <!-- use -->
-              </svg>
+            <a class="social__link social__link--youtube" href="#" aria-label="Youtube">
+              <img class="social__icon social__icon--youtube" src="./img/icon-youtube.svg" width="20" height="14" alt="Youtube">
             </a>
           </li>
         </ul>
         <div class="footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
             Разработано
-            <svg class="copyright__link-icon" width="27" height="34">
-              <!-- use -->
-            </svg>
+            <img class="copyright__icon" src="./img/icon-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy"></img>
           </a>
         </div>
       </div>
